Add stubs for mountebank.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 COMPOSE_PROJECT_NAME=integration_gateway
 ACCOUNT_KEY_SERVICE=https://account-key-service.herokuapp.com
+ACCOUNT_KEY_SERVICE_STUB=http://localhost:9001
 MESSAGE_QUEUE_URL=amqp://guest:guest@172.18.0.1:5672
